@@ -32,11 +32,11 @@ namespace fostlib {
         /// Used for clients where a host is connected to on a given port number
         network_connection(const host &h, nullable< port_number > p = null);
 
-        /// Non-virtual destructor os sub-classing is not allowed
+        /// Non-virtual destructor so sub-classing is not allowed
         ~network_connection();
 
 
-        /// Start SSL on this connection. After a succesful handshake all traffic will be over SSL.
+        /// Start SSL on this connection. After a successful handshake all traffic will be over SSL.
         void start_ssl();
 
         /// Immediately push data over the network
